Add generated API's
