# app/src/main/java/hu/bme/aut/student/bookreview/model/entity/User.java
@@ -1,0 +1,13 @@
+package hu.bme.aut.student.bookreview.model.entity;
+
+/**
+ * Registration object.
+ * Created by Daniel Zolnai on 2017-04-30.
+ */
+public class User {
+    private String _username;
+
+    public User(String username) {
+        _username = username;
+    }
+}
